--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsnd ./src/index.ts"
+    "start": "tsnd --poll --respawn --transpile-only ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +14,8 @@
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.1.6",
     "type-graphql": "^2.0.0-beta.3",
     "typeorm": "^0.3.17"
   },
