--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsnd --poll --respawn --transpile-only ./src/index.ts"
+    "start": "tsnd --poll --respawn --transpile-only ./src/index.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
   }
 }
