--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,10 @@
 services:
   backend:
-    build: ./backend
+    build: 
+      context: ./backend
+      target: prod
+      args:
+        DOCKER_BUILDKIT: 1
     ports:
       - 5000:5000 # local:container
     env_file: ./backend/.env
@@ -12,7 +16,11 @@ services:
       - /var/lib/postgresql/data
     env_file: .env
   frontend:
-    build: ./frontend
+    build: 
+      context: ./frontend
+      target: prod
+      args:
+        DOCKER_BUILDKIT: 1
     ports:
       - 3001:3000 # local:container
 
