--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
+    "graphql": "^16.8.1",
+    "next": "13.4.19",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "graphql": "^16.8.1",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "typescript": "5.2.2"
   }
 }
