--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
@@ -25,9 +26,12 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/cookies": "^0.7.10",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0"
   }
 }
