--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^4.9.5",
     "argon2": "^0.31.2",
     "class-validator": "^0.14.0",
+    "cookie": "^0.6.0",
     "cookies": "^0.9.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/cookie": "^0.6.0",
     "@types/cookies": "^0.7.10",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
