--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: ${{ secrets.DOCKERHUB_REPO_BACKEND }}:latest
+          tags: ${{ secrets.DOCKERHUB_REPO_BACKEND }}:latest, ${{ secrets.DOCKERHUB_REPO_BACKEND }}:${{ github.sha }}
