--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -9,6 +9,8 @@ jobs:
     outputs:
       has-changes: ${{ steps.changes.outputs.src }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Checking for folder changes
         uses: dorny/paths-filter@v3
         id: changes
