--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -7,7 +7,7 @@ jobs:
   has-changes:
     runs-on: ubuntu-latest
     outputs:
-      has-changes: ${{ steps.changes.outputs.src }}
+      has-changes: ${{ steps.changes.outputs.backend }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -16,8 +16,8 @@ jobs:
         id: changes
         with:
           filters: |
-            src:
-              - 'src/**'
+            backend:
+              - 'backend/**'
   test:
     needs: has-changes
     runs-on: ubuntu-latest
