--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -23,15 +23,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Skip tests
-        if: needs.check.outputs.has-changes != 'true'
+        if: needs.has-changes.outputs.has-changes != 'true'
         run: exit 0;
       - name: Check out code
         uses: actions/checkout@v4
+        if: needs.has-changes.outputs.has-changes == 'true'
       - name: Goto backend and run tests
         run: cd backend && npm i && npm test
+        if: needs.has-changes.outputs.has-changes == 'true'
   docker:
     needs: test
-    if: github.ref == 'refs/heads/master' && needs.check.outputs.has-changes != 'true'
+    if: github.ref == 'refs/heads/master' && needs.has-changes.outputs.has-changes != 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
