--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,11 @@
     "graphql-scalars": "^1.22.4",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.33.2",
     "type-graphql": "^2.0.0-beta.3",
     "typeorm": "^0.3.17"
   },
@@ -32,6 +35,7 @@
     "@types/cookies": "^0.7.10",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0"
