--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   backend:
     build: ./backend
-    ports:
-      - 5000:5000 # local:container
+    # ports:
+    #  - 5000:5000 # local:container
     volumes:
       - ./backend/src:/app/src
       - ./uploads:/app/uploads
@@ -14,11 +14,19 @@ services:
     volumes:
       - /var/lib/postgresql/data
     env_file: .env
-  # frontend:
-  #   build: ./frontend
-  #   command: npm run dev
-  #   ports:
-  #     - 3001:3000 # local:container
-  #   volumes:
-  #     - ./frontend/src:/app/src
-
+  frontend:
+    build: ./frontend
+    command: npm run dev
+    # ports:
+    #  - 3000:3000 # local:container
+    volumes:
+      - ./frontend/src:/app/src
+  nginx:
+    stop_grace_period: 0s
+    image: nginx:1.21.3
+    restart: always
+    ports:
+      - ${GATEWAY_PORT:-8000}:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      # - ./logs:/var/log/nginx
