--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@types/uuid": "^9.0.8",
     "argon2": "^0.31.2",
     "class-validator": "^0.14.0",
     "cookie": "^0.6.0",
     "cookies": "^0.9.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
@@ -23,11 +25,13 @@
     "jsonwebtoken": "^9.0.2",
     "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "node-mailjet": "^6.0.5",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.33.2",
     "type-graphql": "^2.0.0-beta.3",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
